--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.3",
+    "use-react-router-breadcrumbs": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
